# stockmarketsim

./: .gitignore  README.md  pyproject.toml
examples/: model.pt  model2.pt  model_high_prices.pt  passive_aggressive.pkl  run_market.ipynb  train_ml_model.ipynb  train_model.ipynb  train_perceptron_model.ipynb
notebooks/: model_naive_price.pt  run_market.ipynb  train_ml_model.ipynb  train_perceptron_model.ipynb
src/simulator/: __init__.py
src/simulator/objects/: __init__.py  market.py  orders.py  participant.py  policy.py  stock.py
src/simulator/objects/policies/: __init__.py  base_policy.py  ml_policy.py  nn_policy.py  transformer.py
src/simulator/objects/policies/architectures/: __init__.py  base_nn.py  perceptron.py
src/simulator/utils/: utils.py
tests/objects/: __init__.py  test_market.py  test_participant.py  test_policies.py  test_stock.py
tests/objects/models/: model.pt  random_forest_regressor.pkl
