[project]
name = "stockmarketsimulator"
version = "0.1.0"

[tool.poetry]
version = "1.0"
packages = [
    { include = "simulator", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
torch = "*"
numpy = ">=2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
ipykernel = "*"
jupyter = "*"

[tool.ruff]
line-length = 88
target-version = "py312" # Target Python version for syntax and features

lint.select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle (docstring style)
    "UP", # pyupgrade
]

lint.ignore = [
    "D100", # Missing docstring in public module
    "D103",
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D203",
    "D211",
    "D213",
    "D214",
    "D401"
]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

# per-file-ignores = { "__init__.py" = ["F401"], "tests/*.py" = ["D"] }

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/simulator --cov-report=term-missing --cov-branch"
